<resources>
    <string-array name="lang_list" translatable="false">
        <item>English</item>
        <item>Español</item>
        <item>Română</item>
        <item>עברית</item>
        <item>日本語</item>
        <item>Português</item>
        <item>français</item>
        <item>ру́сский</item>
        <item>Svenska</item>
        <item>Türk</item>
        <item>italian</item>
        <item>Czech</item>
        <item>हिंदी</item>
        <item>български</item>
        <item>简体中文</item>
        <item>KHMER</item>
    </string-array>
    <string name="s_switch_wifi_uploading" translatable="false">Upload using WIFI:</string>
    <string name="wifi_not_enabled" translatable="false">WIFI is not enabled.</string>
    <string name="countries" translatable="false">Countries</string>
    <string name="use_default_camera" translatable="false">Use Default camera</string>
    <string name="s_owncamera_nn" translatable="false">Use Default camera</string>
    <string name="preview_err" translatable="false">You are not allowed to see this questionnaire\'s preview</string>
    <string name="hhmmss" translatable="false">Hour:Minute:Second</string>
    <string name="hhmm" translatable="false">Hour:Minute</string>
    <string name="mmss" translatable="false">Minute:Second</string>
    <string name="ss" translatable="false">Second</string>
    <string name="button_cancel" translatable="false">Cancel</string>
    <string name="button_set" translatable="false">Set</string>
    <string name="job_list_archiveorder" translatable="false">Archived Orders</string>
    <string name="file_details" translatable="false">File Details: </string>
    <string name="open_file" translatable="false">Open file </string>
    <string name="open_file_location" translatable="false">Open file location </string>
    <string name="file_size" translatable="false">File Size: </string>
    <string name="file_name" translatable="false">File Name: </string>
    <string name="local_path" translatable="false">Local Path: </string>
    <string name="server_path" translatable="false">Server Path: </string>
    <string name="s_switch_auto_uploading" translatable="false">Enable immediate uploading:</string>
    <string name="uplaod_pending_job" translatable="false">There are pending jobs in completed tab, please upload them.</string>
    <string name="email_validation_text" translatable="false">Please enter a valid email address.</string>
    <string name="smalimgWarn" translatable="false">This option can effect quality of images, Are you sure you want to select this option?</string>
    <string name="changeDate" translatable="false">Change Date</string>
    <string name="smallimgTitle" translatable="false">Small (Can effect picture quality)</string>
    <string name="savingImage" translatable="false">Saving Image...</string>
    <string name="ufinsheddwnloding" translatable="false">UnFinished jobs downloading...</string>
    <string name="noJobmsg" translatable="false">"No open assignment is available on Job Board now.
    Please try again later, Thanks!"</string>
    <string name="list_attached_files" translatable="false">List of attached files</string>
    <string name="already_uploaded" translatable="false">Already uploaded</string>
    <string name="pending_upload" translatable="false">Pending upload</string>
    <string name="already_upload" translatable="false">Already uploaded:</string>
    <string name="close" translatable="false">Close</string>
    <string name="nocertMsg" translatable="false">Error or No CheckerTificates found.</string>
    <string name="qoutafullMsg" translatable="false">ERROR uploading files, System storage quota is full please contact administrator to upload pending attachments.</string>
    <string name="alreadyExistingJob" translatable="false">job already exists on app</string>
    <string name="selectDate" translatable="false">Please Select a date</string>
    <string name="plsselect" translatable="false">Please Select</string>
    <string name="errorParsingOrder" translatable="false">Error parsing order API</string>
    <string name="serverfilesMsg" translatable="false">List of attached files:</string>
    <string name="serverfilesTitle" translatable="false">Server Attached Flies</string>
    <string name="removingMsg" translatable="false">Removing....</string>
    <string name="removed" translatable="false">Removed</string>
    <string name="errorRemoving" translatable="false">Error Removing or No internet connection!</string>
    <string name="start_checkertificates" translatable="false">CheckerTificates</string>
    <string name="attached_certificate_msg" translatable="false">Do you want to complete the attached CheckerTificates?</string>
    <string name="checkertificatesmsg" translatable="false">Loading CheckerTificates</string>
    <string name="strtcheckertificatesmsg" translatable="false">Do you want to start this checkerTificate?</string>
    <string name="downloadingCheckrtificate" translatable="false">Downloading CheckerTificate Data</string>
    <string name="retakecheckertificatesmsg" translatable="false">Do you want to retake this CheckerTificate?</string>
    <string name="alreadyPassed" translatable="false">CheckerTificate is already passed.</string>
    <string name="reachedMaxTries" translatable="false">You have reached the max Retakes of the Checkertificate</string>
    <string name="alreadyBlocked" translatable="false">CheckerTificate is in blocked state.</string>
    <string name="replace_inprog_job" translatable="false">Are you sure you want to replace job:</string>
    <string name="remainin_msg" translatable="false">)from online version because online job starting time is latest?   IMPORTANT: This action will replace filled data for In-progress job only."</string>
    <string name="setName" translatable="false">Questionnaire Name: </string>
    <string name="setStatus" translatable="false">Status: </string>
    <string name="grade" translatable="false">Grade: </string>
    <string name="reqGrade" translatable="false">Grade Needed: </string>
    <string name="lastDateTaken" translatable="false">Last date taken: </string>
    <string name="Attemts" translatable="false">Time taken: </string>
    <string name="new_surveyor_sign_up" translatable="false">New registrar Register</string>
    <string name="user_name" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone_number" translatable="false">Phone number</string>
    <string name="address" translatable="false">Address</string>
    <string name="tell_us_about_yourself" translatable="false">Tell us about you</string>
    <string name="setting" translatable="false">Settings</string>
    <string name="do_you_want_to_be_a_be_there_surveyor" translatable="false">Do you want to be a Checker Surveyor?</string>
    <string name="filter_jobs" translatable="false">Filter Jobs</string>
    <string name="see_jobs_in_map" translatable="false">See Jobs in Map</string>
    <string name="save_download" translatable="false">save and download</string>
    <string name="these_files_are_currently_attached_to_the_job" translatable="false">These Files are currently attached to job:</string>
    <string name="image_resizing" translatable="false">Image Resizing</string>
    <string name="image_resizing_original" translatable="false">Original</string>
    <string name="image_resizing_medium" translatable="false">Medium</string>
    <string name="image_resizing_small" translatable="false">Small</string>
    <string name="branch_sorting" translatable="false">Branches sorting.</string>
    <string name="distance" translatable="false">Distance.</string>
    <string name="alphabetical" translatable="false">Alphabetical.</string>
    <string name="geo_tracker_settings" translatable="false">Geo Tracker Settings</string>
    <string name="find_jobs_near_me" translatable="false">Find jobs near me</string>
    <string name="image_cropping" translatable="false">Image Cropping</string>
    <string name="default_camera" translatable="false">Use default camera</string>
    <string name="on" translatable="false">On.</string>
    <string name="off" translatable="false">OFf.</string>
    <string name="job_settings" translatable="false">Job Settings</string>
    <string name="alternate_jobs" translatable="false">Alternate jobs:</string>
    <string name="enable_branch_full_name" translatable="false">Enable Branch Full Name</string>
    <string name="filter_by_date" translatable="false">Filter By Date</string>
    <string name="login_signup_text" translatable="false">Sign up</string>
    <string name="s_item_column_0_line_321_file_190" translatable="false">new job opportunities!</string>
    <string name="s_item_column_0_line_323_file_190" translatable="false">new job opportunity!</string>
    <string name="s_item_column_0_line_206_file_190" translatable="false">Finding jobs near you!</string>
    <string name="s_item_column_0_line_18291_file_88" translatable="false">Already on same question!</string>
    <string name="s_item_column_0_line_804_file_88" translatable="false">Applied</string>
    <string name="s_item_column_0_line_838_file_88" translatable="false">Self Assigned</string>
    <string name="s_item_column_0_line_839_file_88" translatable="false">Thank you for applying for this order. Please click Download jobs to get this in your assigned job list</string>
    <string name="s_item_column_0_line_859_file_88" translatable="false">Error Applying or No internet connection!</string>
    <string name="s_item_column_0_line_893_file_88" translatable="false">Download Now</string>
    <string name="s_item_column_0_line_923_file_88" translatable="false">Download Later</string>
    <string name="s_item_column_0_line_994_file_88" translatable="false">ApplicationComment</string>
    <string name="s_item_column_0_line_1441_file_88" translatable="false">Already Applied</string>
    <string name="s_item_column_0_line_1549_file_88" translatable="false">Fetching Alternate Dates...</string>
    <string name="s_item_column_0_line_1579_file_88" translatable="false">count</string>
    <string name="s_item_column_0_line_1594_file_88" translatable="false">Not Available</string>
    <string name="s_item_column_0_line_1597_file_88" translatable="false">Select a date</string>
    <string name="s_item_column_0_line_65_file_94" translatable="false">Select All</string>
    <string name="s_item_column_0_line_107_file_94" translatable="false">No Content.</string>
    <string name="sortByName" translatable="false">Sorted By Name</string>
    <string name="job_filter_default_dd_option" translatable="false">Select</string>
    <string name="jd_heder_text" translatable="false">Job Detail</string>
    <string name="jd_accept_btn_text" translatable="false">Accept assignment</string>
    <string name="jd_reject_btn_text" translatable="false">Decline</string>
    <string name="jd_date" translatable="false">Date</string>
    <string name="jd_status" translatable="false">Status</string>
    <string name="jd_description" translatable="false">Description</string>
    <string name="jd_setname" translatable="false">Questionnaire</string>
    <string name="jd_clientname" translatable="false">Client</string>
    <string name="jd_branchname" translatable="false">Branch</string>
    <string name="jd_branchfname" translatable="false">Branch full name</string>
    <string name="jd_cityname" translatable="false">city</string>
    <string name="jd_address" translatable="false">Address</string>
    <string name="jd_branchpno" translatable="false">Branch phone</string>
    <string name="jd_openinghours" translatable="false">Opening hours</string>
    <string name="jd_stime" translatable="false">Start time</string>
    <string name="jd_etime" translatable="false">End time</string>
</resources>