<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backGroundDrawable"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/rvjobdetailscreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/navigation_bar"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/jdmapbtn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/hover_txtbtn"
            android:src="@drawable/map_button" />

        <TextView
            android:id="@+id/jd_heder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/jd_heder_text"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/jdcalendarbtn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/hover_txtbtn"
            android:src="@drawable/calendar_btn" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jdbottomrv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rejectbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:background="@color/accept_btn_selector"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/jd_reject_btn_text"
            android:textSize="14dp" />

        <Button
            android:id="@+id/acceptbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@color/accept_btn_selector"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/jd_accept_btn_text"
            android:textSize="14dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/dataView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/jdbottomrv"
        android:layout_below="@+id/rvjobdetailscreen"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/jdbottomrv"
            android:layout_below="@+id/rvjobdetailscreen"
            android:layout_marginTop="25dp" >

            <TableRow>

                <TextView
                    android:id="@+id/jddatet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_date"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jddatev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="1dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdstaust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_status"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdstausv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jddescriptiont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_description"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jddescriptionv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdsetnamet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_setname"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdsetnamev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdclientt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_clientname"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdclientv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dip"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdbranchname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_branchname"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdbranch_name_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdbranchfnamet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_branchfname"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdbranchfnamev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdcitynt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_cityname"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdcitynv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdaddt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_address"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdaddv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdbranchpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_branchpno"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdbranchpv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdopeninght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_openinghours"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdopeninghv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdtimest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_stime"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdtimesv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:id="@+id/jdtimeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/jd_etime"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/jdtimeev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_marginBottom="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="              "
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:text="              "
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <WebView
        android:id="@+id/briefingView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/jdbottomrv"
        android:layout_below="@+id/rvjobdetailscreen"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/darktview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/darkness_value"
        android:visibility="gone" />

</RelativeLayout>