<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layoutDirection="ltr" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:weightSum="20" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20" >

            <ImageView
                android:id="@+id/btn_up"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/back_up"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/btn_sort"
                android:layout_width="280px"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="1px"
                android:entries="@array/spinner_sort_item_list"
                android:prompt="@string/sortByName"
                android:textColor="#ffffff"
                android:textSize="24px"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/list_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_dismiss"
        android:layout_below="@+id/layout"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <ToggleButton
            android:id="@+id/btn_select_unselect"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/checkbox_selector_n"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_select_unselect"
            android:text="@string/s_item_column_0_line_65_file_94"
            android:textColor="#000000"
            android:textSize="15dp" />

        <ListView
            android:id="@+id/list_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/nameText"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#8e8e8e"
            android:dividerHeight="1px"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/txt_extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/img_file"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/file_icon"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_extra_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_file"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/s_item_column_0_line_107_file_94"
            android:textColor="#0000fc"
            android:textSize="20dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#b2cb39"
        android:paddingBottom="6dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="6dp"
        android:text="@string/job_filter_default_dd_option"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>